// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.workspace.source;

option go_package = "namespacelabs.dev/foundation/workspace/source";

import "workspace/source/protos/filedescset.proto";

message OpProtoGen {
    string                          package_name = 1;
    protos.FileDescriptorSetAndDeps protos       = 3;
    Framework                       framework    = 4;

    reserved 2;

    enum Framework {
        FRAMEWORK_UNSPECIFIED = 0;
        GO                    = 1;
        TYPESCRIPT            = 2;
    }
}